# Peakle

./: .gitignore  Makefile  README.md  TODO.md  pyproject.toml
docs/: research-and-development.md  research-evidence.json  validation-strategy.md
docs/development/: README.md  algorithms.md  camera-fitting-research.md  high-precision-reference-data.md  library-decisions.md  pose-atlas-study.md  pose-localization-strategy.md  project-structure.md  ridge-extraction-research.md  roadmap-and-risks.md  synthetic-demo-pipeline.md  synthetic-localization-benchmark.md
scripts/: acceptance.py  apply_support_gate.py  bench_geopose.py  build_gt_report_html.py  build_gt_v2.py  calibrate_verdict.py  fetch_geopose.py  gt_panno.py  gt_report.py  outline_bench.py  photo_support_batch.py  rescue_relabel.py  run_optimizer.py  run_sam3.py  score_v2.py  swiss_refine.py  worst_forensics.py
src/peakle/: __init__.py  benchmark.py  cli.py  config.py  default_settings.yaml  dem_ridges.py  depth.py  depth_cluster.py  edges.py  matching.py  sam3_seg.py  sam_point_seg.py  segmentation.py  segmenters.py
src/peakle/annotation/: __init__.py  labeling.py  overlay.py  sensitivity.py  sensitivity_study.py
src/peakle/contours/: __init__.py
src/peakle/demo/: __init__.py  pipeline.py
src/peakle/domain/: __init__.py  angles.py  annotations.py  camera.py  contours.py  coordinates.py  images.py  peaks.py  pose.py  projection.py  scene.py  terrain.py
src/peakle/io/: artifacts.py
src/peakle/localize/: __init__.py  atlas_dashboard.py  atlas_geometry.py  bench.py  candidate_validation.py  compatibility.py  copdem.py  correspondence.py  explanation.py  extract.py  fg_check.py  geopose.py  gtbuild.py  gtquality.py  gtrefine.py  outline_score.py  paths.py  pfm_geometry_rerank.py  photo_beam_pnp_benchmark.py  photo_beam_render_pnp.py  photo_geometry_verifier.py  photo_support.py  pnp.py  raycast.py  render_match_pnp.py  skyline_atlas.py  solve.py  strategy_bench.py  swissdem.py  synthetic_pipeline_bench.py  (+1 more)
tests/: conftest.py
tests/integration/: test_demo_pipeline.py  test_synthetic_production_pose_contract.py  test_web_api.py
tests/unit/: test_annotation_sensitivity.py  test_annotation_sensitivity_script.py  test_annotation_sensitivity_study.py  test_artifacts.py  test_atlas_dashboard.py  test_atlas_geometry.py  test_benchmark.py  test_camera.py  test_compatibility.py  test_cyltan_objective.py  test_dem_ridges.py  test_exact_pose_correspondence.py  test_exact_pose_screen.py  test_explanation.py  test_extract.py  test_fg_check.py  test_gazetteer.py  test_geopose.py  test_gtlab.py  test_gtquality.py  test_gtrefine.py  test_jobs.py  test_localize.py  test_matching.py  test_orthophoto.py  test_outline_score.py  test_pfm_geometry_rerank.py  test_photo_beam_pnp_benchmark.py  test_photo_beam_render_pnp.py  test_photo_geometry_verifier.py  test_photo_support.py  test_pipeline.py  test_pose_atlas_pfm_geometry_script.py  test_pose_atlas_photo_geometry_script.py  test_pose_atlas_script.py  test_rasterizer.py  test_raycast.py  test_render_match_pnp.py  test_research_experiment.py  test_roma_match_worker.py  (+11 more)
(+112 files in other folders)
