[build-system]
requires = ["uv_build>=0.11.21,<0.12"]
build-backend = "uv_build"

[project]
name = "peakle"
version = "0.1.0"
description = "Synthetic mountain peak annotation demo."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "fastapi",
  "numpy",
  "pillow",
  "pydantic",
  "pydantic-settings[yaml]",
  "scikit-image",
  "scipy",
  "uvicorn[standard]",
]

[project.scripts]
peakle = "peakle.cli:main"

[dependency-groups]
dev = [
  "httpx",
  "pytest",
  "ruff",
  "ty",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Presentation/experiment runners carry inherently long lines — HTML/CSS report templates and
# image-annotation draw calls — where wrapping to 120 hurts readability. The cap is relaxed for
# these files only; every other rule (and every other file) stays strict.
"src/peakle/scripts/build_gt_report_html.py" = ["E501"]
"src/peakle/scripts/gt_report.py" = ["E501"]
"src/peakle/scripts/gt_panno.py" = ["E501"]
"src/peakle/scripts/run_sam3.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
